fixed slider panel width
made it all 960px--hopefully it isn't too small

took out excess css
fixed gap on bottom

--- a/style.less
+++ b/style.less
@@ -172,21 +172,25 @@ h4 {
 	line-height: 1.0em;
 }
 
+
+#slider-panel-nav-wrap {
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
 #slider-zone {
-	margin: auto;
 	border-top: @std-border;
 	border-bottom: @std-border;
-	width: 80%;
 	margin: 0 auto;
 	height: auto;
 	position: relative;
 	background: #ffffff;
 	position: relative;
+	
 }
 
-.meteor-slides.nav-both {
-	margin-bottom: 0px;
-}
 
 #slider-panel {
 	float: right;
@@ -211,7 +215,7 @@ h4 {
 }
 
 nav #nav-main, #nav-footer {	
-	width: 80%;
+	
 	font-weight: 400;
 	margin: auto;
 	height: 2.5em;
@@ -245,6 +249,9 @@ nav #nav-main, #nav-footer {
 					}
 }
 
+	#nav-footer{
+			width:80%;
+}
 .current-menu-item a {
 	color: @hover-color;
 }
